// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolve adds error info 1`] = `
{
  "streams": [
    {
      "behaviorHints": {},
      "externalUrl": "https://example.com/",
      "name": "WebStreamr N/A ⚠️ external",
      "title": "🌐 German 🇩🇪
🔗 hoster.com
⚠️ Request was blocked.",
    },
    {
      "behaviorHints": {},
      "externalUrl": "https://example.com/",
      "name": "WebStreamr N/A ⚠️ external",
      "title": "🌐 German 🇩🇪
🔗 hoster.com
⚠️ Request was blocked.",
    },
    {
      "behaviorHints": {},
      "externalUrl": "https://example2.com/",
      "name": "WebStreamr N/A ⚠️ external",
      "title": "🌐 German 🇩🇪
🔗 hoster.com
❌ Request failed. Request-id: id.",
    },
    {
      "behaviorHints": {},
      "externalUrl": "https://example2.com/",
      "name": "WebStreamr N/A ⚠️ external",
      "title": "🌐 German 🇩🇪
🔗 hoster.com
🐢 Request timed out.",
    },
    {
      "behaviorHints": {},
      "externalUrl": "https://example3.com/",
      "name": "WebStreamr N/A ⚠️ external",
      "title": "🌐 German 🇩🇪
🔗 hoster.com
⏳ Request queue is full. Please try again later or consider self-hosting.",
    },
    {
      "behaviorHints": {},
      "externalUrl": "https://example4.com/",
      "name": "WebStreamr N/A ⚠️ external",
      "title": "🌐 German 🇩🇪
🔗 hoster.com
❌ Request failed with status 500 (Internal Server Error). Request-id: id.",
    },
  ],
}
`;

exports[`resolve adds error info 2`] = `
{
  "streams": [
    {
      "behaviorHints": {},
      "name": "WebStreamr N/A",
      "title": "🌐 German 🇩🇪
🔗 hoster.com
⚠️ Request was blocked.",
      "ytId": "E4WlUXrJgy4",
    },
    {
      "behaviorHints": {},
      "name": "WebStreamr N/A",
      "title": "🌐 German 🇩🇪
🔗 hoster.com
⚠️ Request was blocked.",
      "ytId": "E4WlUXrJgy4",
    },
    {
      "behaviorHints": {},
      "name": "WebStreamr N/A",
      "title": "🌐 German 🇩🇪
🔗 hoster.com
❌ Request failed. Request-id: id.",
      "ytId": "E4WlUXrJgy4",
    },
    {
      "behaviorHints": {},
      "name": "WebStreamr N/A",
      "title": "🌐 German 🇩🇪
🔗 hoster.com
🐢 Request timed out.",
      "ytId": "E4WlUXrJgy4",
    },
    {
      "behaviorHints": {},
      "name": "WebStreamr N/A",
      "title": "🌐 German 🇩🇪
🔗 hoster.com
⏳ Request queue is full. Please try again later or consider self-hosting.",
      "ytId": "E4WlUXrJgy4",
    },
    {
      "behaviorHints": {},
      "name": "WebStreamr N/A",
      "title": "🌐 German 🇩🇪
🔗 hoster.com
❌ Request failed with status 500 (Internal Server Error). Request-id: id.",
      "ytId": "E4WlUXrJgy4",
    },
  ],
}
`;

exports[`resolve ignores not found errors 1`] = `
{
  "streams": [],
  "ttl": 900000,
}
`;

exports[`resolve returns empty array if no handler found anything 1`] = `
{
  "streams": [],
  "ttl": 900000,
}
`;

exports[`resolve returns empty array if no handler supported the type 1`] = `
{
  "streams": [],
  "ttl": 900000,
}
`;

exports[`resolve returns handler errors as stream 1`] = `
{
  "streams": [
    {
      "name": "WebStreamr",
      "title": "🔗 MeineCloud
❌ Request failed. Request-id: id.",
      "ytId": "E4WlUXrJgy4",
    },
  ],
}
`;

exports[`resolve returns info as stream if no handlers were configured 1`] = `
{
  "streams": [
    {
      "name": "WebStreamr",
      "title": "⚠️ No handlers found. Please re-configure the plugin.",
      "ytId": "E4WlUXrJgy4",
    },
  ],
}
`;

exports[`resolve returns sorted results 1`] = `
{
  "streams": [
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-dropload_de",
        "videoSize": 1395864371,
      },
      "name": "WebStreamr 1080P",
      "title": "📂 des-teufels-bad-2024
💾 1.3 GB
🌐 German 🇩🇪
🔗 Dropload",
      "url": "https://srv27.dropload.io/hls2/01/00197/lyo2h1snpe5c_h/master.m3u8?t=qTZsRGIMnUjXsQ4o2LRLlsT4tGG1AdJrRBRDGttNLPM&s=1746903744&e=14400&f=987607&i=0.0&sp=0&ii=130.61.236.204",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-dropload_it",
        "videoSize": 1181116006,
      },
      "name": "WebStreamr 720P",
      "title": "📂 the-devils-bath-2024-sd-sub-ita
💾 1.1 GB
🌐 Italian 🇮🇹
🔗 Dropload",
      "url": "https://srv34.dropload.io/hls2/01/00200/xsr90y2ltdyx_h/master.m3u8?t=avFOZ-10hDxo6__iaoSUrq7o4yY3ldLw6XDlXxpXF8E&s=1747059001&e=14400&f=1004116&srv=srv24&i=0.0&sp=0&ii=130.61.236.204&p1=srv24&p2=srv24",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-supervideo_it",
        "videoSize": 1181116006,
      },
      "name": "WebStreamr 720P",
      "title": "📂 the devils bath 2024 sub ita
💾 1.1 GB
🌐 Italian 🇮🇹
🔗 SuperVideo",
      "url": "https://hfs279.serversicuro.cc/hls/,dnzpejj427g4a3gyvbth53rxqewqgqqzp3wr6zwutysvud7zroar3cb75d3q,.urlset/master.m3u8",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-supervideo_de",
        "videoSize": 1073741824,
      },
      "name": "WebStreamr 720P",
      "title": "📂 des teufels bad 2024
💾 1 GB
🌐 German 🇩🇪
🔗 SuperVideo",
      "url": "https://hfs290.serversicuro.cc/hls/,dnzpfi3d27g4a3gyvbmh5klwtl65qh654hyjtgupd6p56thhyqu6ra3olbfa,.urlset/master.m3u8",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-doodstream_de",
        "notWebReady": true,
        "proxyHeaders": {
          "request": {
            "Referer": "http://dood.to/",
          },
        },
      },
      "name": "WebStreamr N/A",
      "title": "📂 des-teufels-bad-2024
🌐 German 🇩🇪
🔗 DoodStream",
      "url": "https://aa360cc.cloudatacdn.com/u5kjv4jxytd3sdgge5uogji5dg4huat2pxrm2qibdbm5rtpmbzgb5tornooa/k9wk0js17e~mocked-random-string?token=7uebebipnnhusa4xnyea1er4&expiry=639837296000",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-doodstream_it",
        "notWebReady": true,
        "proxyHeaders": {
          "request": {
            "Referer": "http://dood.to/",
          },
        },
      },
      "name": "WebStreamr N/A",
      "title": "📂 the-devils-bath-2024-sd-sub-ita
🌐 Italian 🇮🇹
🔗 DoodStream",
      "url": "https://kk892as.cloudatacdn.com/u5kj7j7s27d3sdgge5woezkbi4pu672wktq3aqujw47rbpl3xog2gtqnw2xa/awn9rgotuu~mocked-random-string?token=aw2v2d8uhbrj2ky54d573ujk&expiry=639837296000",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-external_de",
      },
      "externalUrl": "https://mixdrop.ag/e/3nzwveprim63or6",
      "name": "WebStreamr N/A ⚠️ external",
      "title": "🌐 German 🇩🇪
🔗 mixdrop.ag",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-external_it",
      },
      "externalUrl": "https://mixdrop.ag/e/vk196d6xfzwwo1",
      "name": "WebStreamr N/A ⚠️ external",
      "title": "🌐 Italian 🇮🇹
🔗 mixdrop.ag",
    },
  ],
  "ttl": 900000,
}
`;
